--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
-body {
-    font-family: Arial, sans-serif;
+/* Reset default margin and padding */
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    border-left: 5px solid #052030;
-    border-right: 5px solid #052030;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    
+
 }
 
 header {
@@ -25,7 +33,7 @@ article {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0 auto; /* Center the article */
 }
 
 a {
@@ -39,16 +47,17 @@ a:hover {
 
 /* Media query for small devices (portrait) */
 @media (max-width: 600px) {
-    article {
-        padding: 10px;
-    }
-
     header {
         padding: 10px;
     }
 
     main {
         padding: 10px;
+    }
+
+    article {
+        padding: 10px;
+        margin: 0 5px; /* Add a small margin to prevent touching the screen edge */
     }
 
     .tooltip .tooltiptext {
